Group by idealStateReplicaId not pool
Pool (infrastructure rack/zone tag) and replica group (logical segment-mirroring
position) are orthogonal. When numReplicaGroups > numPools or all servers have
FALLBACK_POOL_ID=-1, pool-based grouping merges distinct replica groups into one,
allowing mixed selections that violate the strict same-replica-group invariant
required for upsert/dedup correctness (stale or duplicate primary-key results).

- Replace candidate.getPool() with candidate.getIdealStateReplicaId() for grouping
  in select() and filtering in selectServersForReplicaGroup()
- Emit POOL_SEG_QUERIES metric per actual pool (from selected candidate) rather
  than per replicaGroupId, matching ReplicaGroupInstanceSelector.selectServers()
- Fix test data: set correct idealStateReplicaId per sorted ideal state position
- Add regression test with all servers at pool=-1 proving replicaId-based routing